# agent-development-kit

./: .gitignore  README.md  pyproject.toml
agent-with-tools/websearch_agent/: agent.py
agents-with-callbacks/before_after_agent/: agent.py
agents-with-callbacks/before_after_model/: agent.py
agents-with-callbacks/before_after_tool/: agent.py
basic-agent/greeting_agent/: .env.example  agent.py
litellm-agent/joke_generating_agent/: agent.py
loop-workflow/linkedin_post_agent/: agent.py
loop-workflow/linkedin_post_agent/subagents/post_generator/: agent.py
loop-workflow/linkedin_post_agent/subagents/post_refiner/: agent.py
loop-workflow/linkedin_post_agent/subagents/post_reviewer/: agent.py
multi-agent/manager/sub_agents/news_analyst/: agent.py
multi-agent/manager/sub_agents/stock_analyst/: agent.py
parallel-workflow/system_monitor_agent/: agent.py
parallel-workflow/system_monitor_agent/subagents/memory_info_agent/: agent.py
persistent-storage-agent/: agent_data.db  main.py  utils.py
persistent-storage-agent/memory_agent/: __init__.py  agent.py
sequential-workflow/lead_qualification_agent/: agent.py
sequential-workflow/lead_qualification_agent/subagents/recommender/: agent.py
sequential-workflow/lead_qualification_agent/subagents/scorer/: agent.py
sequential-workflow/lead_qualification_agent/subagents/validator/: agent.py
stateful-agent-memory/: stateful_session.py
stateful-agent-memory/qa_agent/: agent.py
stateful-multi-agent/: main.py  utils.py
structured-output-agent/email_generation_agent/: agent.py
(+1 files in other folders)
