[project]
name = "adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "google-adk>=1.19.0",
    "google-generativeai>=0.8.5",
    "litellm>=1.80.5",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "yfinance>=0.2.66",
]
